<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true" >

         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
              >
      <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:layout_marginBottom="0dp"
        android:text="@string/stags" />

    <EditText
        android:id="@+id/tagedit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_margin="8dp"
        android:layout_marginBottom="0dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/adultcheck"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tagedit"
        android:layout_margin="8dp"
        android:text="@string/sadult" />

    <Spinner
        android:id="@+id/commentspinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/commenttv"
        android:layout_margin="8dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:spinnerMode="dialog"
         />

    <TextView
        android:id="@+id/commenttv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/adultcheck"
        android:layout_margin="8dp"
        android:layout_marginBottom="0dp"
        android:text="@string/scomments" />

    <TextView
        android:id="@+id/accesstv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/commentspinner"
        android:layout_margin="8dp"
        android:layout_marginBottom="0dp"
        android:text="@string/saccess" />

    <Spinner
        android:id="@+id/accessspinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/accesstv"
        android:layout_margin="8dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp" 
        android:spinnerMode="dialog"
        />

     <Button
         android:id="@+id/btnSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/accessspinner"
         android:text="@string/ssave" />
             
         </RelativeLayout>
     </ScrollView>

</RelativeLayout>
