<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/latop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:visibility="visible" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lapostedit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/latop" >

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/ssave" />

        <TextView
            android:id="@+id/titleView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:text="@+string/theme" />

        <EditText
            android:id="@+id/titleEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleView1"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:ems="10" />
		
        <EditText
            android:id="@+id/textEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/laBtns"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            
             android:scrollHorizontally="false"
        android:scrollbars="vertical"
        android:singleLine="false"  
            
            
            android:ems="10"
           />

        
        
        <!--   <EditText
    	android:inputType="textMultiLine"
        android:lines="20"
        android:minLines="5"
        
    		 android:id="@+id/textEdit"
           android:layout_above="@+id/btnSave"
            android:layout_below="@+id/laBtns"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
		/>
           -->
           


        <!--
         android:scrollHorizontally="false"
        android:scrollbars="vertical"
        android:singleLine="false"  
    
        
        
              <EditText
                android:id="@+id/textEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnSave"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/laBtns"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
           
          	/>
 -->

        <LinearLayout
            android:id="@+id/laBtns"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/titleEdit"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnBold"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="4dp"
                android:layout_toRightOf="@+id/btnbackgroundunderline"
                android:layout_weight="0.5"
                android:scaleType="centerInside"
                android:text="@string/icon_bold" />

            <Button
                android:id="@+id/btnItalic"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@+id/btnBold"
                android:layout_weight="0.5"
                android:text="@string/icon_italic" />

            <Button
                android:id="@+id/btnUnderline"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@+id/btnItalic"
                android:layout_weight="0.5"
                android:text="@string/icon_underline" />

            <Button
                android:id="@+id/btnImage"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@+id/btnBold"
                android:layout_weight="0.5"
                android:text="@string/icon_picture" />

            <Button
                android:id="@+id/btntags"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@+id/btnImage"
                android:layout_weight="0.5"
                android:text="@string/icon_tags" />

            </LinearLayout>
        <requestFocus />
    </RelativeLayout>

</RelativeLayout>